# centinelacam

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
scripts/: auto_update.sh  setup_raspberry.sh  training_receiver.py
src/: __init__.py  __main__.py  config.py  pipeline.py
src/api/: routes_control.py  server.py
src/camera/: __init__.py  capture.py
src/detector/: __init__.py  coco_classes.py  models.py  yolo_detector.py
src/gate_logic/: __init__.py  controller.py  events.py
src/llm_engine/: analyzer.py
src/metrics/: __init__.py  collector.py
src/notifications/: telegram.py
src/runtime/: __init__.py  store.py
src/static/: dashboard.html
src/storage/: __init__.py  database.py  sync.py
src/training/: __init__.py  uploader.py
tests/: test_gate_logic.py
