[project]
name = "cam-pi-gate"
version = "0.1.0"
description = "Edge AI gate control system for loading docks - Raspberry Pi 5"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.2.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "ollama>=0.2.0",
    "sentence-transformers>=3.0.0",
    "sqlite-utils>=3.36",
    "Pillow>=10.3.0",
    "python-multipart>=0.0.9",
    "schedule>=1.2.0",
    "rclone-python>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
gpio = [
    "gpiozero>=2.0",
    "RPi.GPIO>=0.7.1",
]
barcode = [
    "pyzbar>=0.1.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
